--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="350" Width="525"
         WindowStyle="SingleBorderWindow"   
         WindowState="Maximized"
-        ResizeMode="NoResize"
+        ResizeMode="CanResize"
         >
 
 
